# KV_Storage

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.cpp  command.sh  main.cpp  server.cpp  test.cpp
include/: IOpool.hpp  cache.hpp  fileInfo.hpp  global.h  skiplist.hpp  tasks.hpp
proto/: info.pb.cc  info.pb.h  info.proto  sl.pb.cc  sl.pb.h  sl.proto
